# Parallel_programming

./: CMakeLists.txt  Makefile  README.md  hello  hello.c  list  main.cpp  push.sh  test.txt
jupiter_notebook/simpsons/: AI_task1.ipynb  Untitled.ipynb
jupiter_notebook/simpsons/.ipynb_checkpoints/: AI_task1-checkpoint.ipynb
tasks2/lab2/task1/: Makefile  main.c  main.cpp  task1
tasks2/lab2/task1/.ipynb_checkpoints/: main-checkpoint.c
tasks2/lab2/task2/: Makefile  main.c  task2
tasks2/lab2/task3/: Makefile  main.cpp  main2.cpp  task3
tasks3/task1/: Makefile  main.cpp  task1
tasks3/task2/: Makefile  task2  task2.cpp
tasks3/task2/test/: Makefile  test  test.cpp  test1.txt  test2.txt  test3.txt
tasks4/: task1.py
tasks5/: main.py
tasks6/cpu/: Makefile  main.cpp  matrix.txt  multi  serial
tasks6/gpu/: Makefile  gpu  gpu2  main1.cpp  main2.cpp  matrix.txt  matrix2.txt
tasks7/: Makefile  main2.cpp
tasks8/: CMakeLists.txt  main2.cu
